# Hephaestus

./: .bandit  .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .venv  .yamllint  ADR_CONTINUATION_SUMMARY.md  ADR_HARDENING_SUMMARY.md  ASTRO_MIGRATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  COPILOT_STATUS.md  DOCUMENTATION_ALIGNMENT_SUMMARY.md  E2E_VALIDATION_SUMMARY.md  EDGE_CASE_AND_ADR_SUMMARY.md  GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AI_FEATURES.md  LICENSE  Next_Steps.md  OPTIMIZATIONS_2025-01-08.md  ORCHESTRATION_COMPLETE.md  PROBLEMS.md  QC_QA_SUMMARY.md  QUALITY_IMPROVEMENT_SUMMARY.md  QUALITY_REVIEW.md  README.md  RELEASE_READINESS_IMPLEMENTATION.md  RELEASE_READINESS_SUMMARY.md  REVIEW_SUMMARY.txt  SECURITY.md  SPRINT_2_COMPLETE.md  SPRINT_2_SUMMARY.md  SPRINT_3_SUMMARY.md  cleanup-macos-cruft.sh  coverage.xml  mkdocs.yml  mkdocs.yml.archived  pyproject.toml  (+2 more)
.devcontainer/: devcontainer.json
.github/: RELEASE_CHECKLIST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  docs.yml  macos-metadata-guard.yml  pip-audit.yml  pre-commit-autoupdate.yml  publish-pypi.yml  publish.yml  release-drafter.yml  release-tag.yml  sigstore-backfill.yml  turborepo-monitor.yml  validate-dependencies.yml
.hephaestus/audit/: cleanup-20251008T080102Z.json  cleanup-20251008T080229Z.json  cleanup-20251008T080352Z.json  cleanup-20251008T080542Z.json  cleanup-20251008T084120Z.json  cleanup-20251008T095254Z.json  cleanup-20251008T102647Z.json  cleanup-20251008T105236Z.json  cleanup-20251008T123110Z.json  cleanup-20251008T130138Z.json  cleanup-20251008T130203Z.json  cleanup-20251008T133614Z.json  cleanup-20251008T135153Z.json  cleanup-20251008T145202Z.json  cleanup-20251008T153028Z.json  cleanup-20251008T163658Z.json  cleanup-20251008T174828Z.json  cleanup-20251009T005326Z.json  cleanup-20251009T011441Z.json  cleanup-20251009T012210Z.json  cleanup-20251009T012734Z.json  cleanup-20251009T020846Z.json  cleanup-20251009T024553Z.json
.trunk/: trunk.yaml
docs/: MIGRATION.md  SCRIPT_CONFIGURATION_GUIDE.md  UNIFIED_ORCHESTRATOR_GUIDE.md  cli-completions.md  editor-setup.md  index.md  lifecycle.md  pre-release-checklist.md  refactoring-toolkit.md
docs-site/: QUICKSTART.md  README.md  astro.config.mjs  package.json
docs-site/scripts/: prune-stale.js  sync-changelog.js  sync-version.js  update-api-docs.js  update-cli-reference.js  validate-examples.js  validate-links.js
docs-site/src/components/: HeaderCta.astro
docs-site/src/pages/: index.astro
docs-site/src/styles/: custom.css  theme.css
docs/adr/: 0000-template.md  0001-stride-threat-model.md  0002-plugin-architecture.md  0003-opentelemetry-integration.md  0004-rest-grpc-api.md  0005-pypi-publication.md  0006-sigstore-backfill.md  MIGRATION_NOTICE.md  README.md
docs/api/: openapi.yaml
docs/api/examples/: README.md  grpc_quality_client.py
docs/explanation/: architecture.md  exfat-compatibility.md  frontier-red-team-gap-analysis.md  frontier-standards.md
docs/how-to/: ai-agent-integration.md  ci-setup.md  e2e-testing.md  install-wheelhouse.md  observability.md  operating-safely.md  plugin-development.md  plugin-review-process.md  quality-gates.md  release-process.md  testing.md  troubleshooting.md
docs/reference/: api.md  cli.md  plugin-catalog.md  refactoring-toolkit.md  telemetry-events.md
docs/tutorials/: getting-started.md
hephaestus-toolkit/refactoring/ci/: workflow.partial.yml
hephaestus-toolkit/refactoring/config/: refactor.config.yaml
hephaestus-toolkit/refactoring/docs/: PLAN.md  PLAYBOOK.md  README.md
hephaestus-toolkit/refactoring/scripts/: scan_hotspots.py
ops/: README.md  roadmap-template.md  turborepo-release.json
ops/attestations/: sigstore-inventory.json
plugin-templates/: README.md
plugin-templates/example-plugin/: .gitignore  README.md  example_plugin.py  plugins.toml.example  pyproject.toml  test_example_plugin.py
plugin-templates/registry/: README.md  example-plugin.sigstore  example-plugin.toml  trust-policy.toml
scripts/: README.md  backfill_sigstore_bundles.py  bump_version.sh  compile_protos.py  hephaestus-orchestrator.sh  lint_nested_decorators.py  migrate-from-mkdocs.py  run_actionlint.sh  setup-dev-env.sh  validate-dependency-orchestration.sh  validate-macos-setup.sh  validate_quality_gates.py
site/: 404.html  index.html  sitemap.xml
site/adr/: index.html
site/adr/0000-template/: index.html
site/adr/0001-stride-threat-model/: index.html
site/adr/0002-plugin-architecture/: index.html
site/adr/0003-opentelemetry-integration/: index.html
site/adr/0004-rest-grpc-api/: index.html
site/adr/0005-pypi-publication/: index.html
site/adr/0006-sigstore-backfill/: index.html
site/api/: openapi.yaml
site/cli-completions/: index.html
site/editor-setup/: index.html
site/how-to/ci-setup/: index.html
site/lifecycle/: index.html
site/pre-release-checklist/: index.html
site/refactoring-toolkit/: index.html
site/search/: search_index.json
src/hephaestus/: __init__.py  analytics.py  analytics_streaming.py  audit.py  backfill.py  cleanup.py  cli.py  command_helpers.py  drift.py  events.py  logging.py  planning.py  release.py  resource_forks.py  schema.py  telemetry.py  toolbox.py
tests/: conftest.py  test_analytics.py  test_analytics_streaming.py  test_api.py  test_api_auth.py  test_api_service.py  test_audit.py  test_backfill.py  test_backfill_script.py  test_builtin_plugins.py  test_cleanup.py  test_cli.py  test_command_helpers.py  test_drift.py  test_e2e_setup.py  test_grpc.py  test_lint_nested_decorators.py  test_logging.py  test_metrics_prometheus.py  test_planning.py  test_plugins.py  test_plugins_integration.py  test_plugins_marketplace.py  test_release.py  test_resource_forks.py  test_rest_tasks.py  test_schema.py  test_setup_script_logic.sh  test_telemetry.py  test_telemetry_integration.py  test_telemetry_otel.py  test_telemetry_tracing.py  test_toolbox.py
tests/smoke/: test_testpypi_install.py
(+91 files in other folders)
