[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hephaestus-example-plugin"
version = "1.0.0"
description = "Example quality gate plugin for Hephaestus"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["hephaestus", "quality-gate", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "hephaestus>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hephaestus-example-plugin"
Documentation = "https://github.com/yourusername/hephaestus-example-plugin#readme"
Repository = "https://github.com/yourusername/hephaestus-example-plugin"
Issues = "https://github.com/yourusername/hephaestus-example-plugin/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=. --cov-report=term-missing"
testpaths = ["test_example_plugin.py"]
